--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-table": "^1.56.1",
     "notistack": "^0.9.7",
     "npm": "^6.13.7",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
     "react-dom": "^16.12.0",
