--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/core.kapp.dev_plugins.yaml
 - bases/core.kapp.dev_files.yaml
 - bases/core.kapp.dev_componenttemplates.yaml
+- bases/core.kapp.dev_dependencies.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -14,6 +15,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_applications.yaml
 #- patches/webhook_in_files.yaml
 #- patches/webhook_in_componenttemplates.yaml
+#- patches/webhook_in_dependencies.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -21,6 +23,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_applications.yaml
 #- patches/cainjection_in_files.yaml
 #- patches/cainjection_in_componenttemplates.yaml
+#- patches/cainjection_in_dependencies.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
