extract ingress plugin to config kong-controller

--- a/config/samples/core_v1alpha1_dependency.yaml
+++ b/config/samples/core_v1alpha1_dependency.yaml
@@ -1,7 +1,8 @@
 apiVersion: core.kapp.dev/v1alpha1
 kind: Dependency
 metadata:
-  name: dependency-sample
+  name: dependency-sample-kong
 spec:
   # Add fields here
-  foo: bar
+  type: kong
+  version: 1.0.1
