--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -29,6 +29,26 @@ rules:
 - apiGroups:
   - core.kapp.dev
   resources:
+  - dependencies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kapp.dev
+  resources:
+  - dependencies/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kapp.dev
+  resources:
   - files
   verbs:
   - create
