Cluster Issuer for Ingress

--- a/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -137,7 +137,7 @@ spec:
                       volume should be mounted. Behaves similarly to SubPath but environment
                       variable references $(VAR_NAME) are expanded using the container's
                       environment. Defaults to "" (volume's root). SubPathExpr and
-                      SubPath are mutually exclusive. This field is beta in 1.15.
+                      SubPath are mutually exclusive.
                     type: string
                 required:
                 - mountPath
