--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -19,6 +19,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - cert-manager.io
+  resources:
+  - clusterissuers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - core.kapp.dev
   resources:
   - applications
@@ -109,3 +121,15 @@ rules:
   - deployments/status
   verbs:
   - get
+- apiGroups:
+  - extensions
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
