--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 # https://create-react-app.dev/docs/setting-up-your-editor/#experimental-extending-the-eslint-config
 EXTEND_ESLINT=true
+REACT_APP_K8S_API_PERFIX=https://kapp-sandbox.intra./proxy
