--- a/config/crd/bases/core.kapp.dev_files.yaml
+++ b/config/crd/bases/core.kapp.dev_files.yaml
@@ -15,6 +15,8 @@ spec:
     plural: files
     singular: file
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: File is the Schema for the files API
@@ -42,8 +44,11 @@ spec:
           - content
           - path
           type: object
-      required:
-      - spec
+        status:
+          properties:
+            lastPath:
+              type: string
+          type: object
       type: object
   version: v1alpha1
   versions:
