--- a/config/samples/core_v1alpha1_file.yaml
+++ b/config/samples/core_v1alpha1_file.yaml
@@ -1,10 +1,15 @@
 apiVersion: core.kapp.dev/v1alpha1
 kind: File
 metadata:
-  name: nginx-config2
-data: |
-  location / {
-    proxy_pass http://localhost:3000
-  }
+  name: test1
+spec:
+  path: /a/b/c/d.yml
+  content: value
 ---
-
+apiVersion: core.kapp.dev/v1alpha1
+kind: File
+metadata:
+  name: test2
+spec:
+  path: /a/b
+  content: value2
