--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,22 +54,9 @@
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/eslint --ext ts,tsx src --max-warnings=0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "devDependencies": {
     "husky": "^4.2.1"
