--- a/controller/config/samples/core_v1alpha1_file.yaml
+++ b/controller/config/samples/core_v1alpha1_file.yaml
@@ -4,12 +4,28 @@ metadata:
   name: test1
 spec:
   path: /a/b/c/d.yml
-  content: value
+  content: content1
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: File
 metadata:
   name: test2
 spec:
-  path: /a/b
-  content: value2
+  path: /a/b/e.json
+  content: content2
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: File
+metadata:
+  name: test3
+spec:
+  path: /a/f.conf
+  content: content3
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: File
+metadata:
+  name: test4
+spec:
+  path: /g.json
+  content: content3
