--- a/controller/resources/kube-prometheus/prometheus-prometheus.yaml
+++ b/controller/resources/kube-prometheus/prometheus-prometheus.yaml
@@ -20,6 +20,7 @@ spec:
   resources:
     requests:
       memory: 400Mi
+  retention: 30d
   ruleSelector:
     matchLabels:
       prometheus: k8s
@@ -31,4 +32,17 @@ spec:
   serviceAccountName: prometheus-k8s
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
+# storage:
+#   volumeClaimTemplate:
+#     metadata:
+#         creationTimestamp: "2006-01-02T15:04:05Z"
+#     apiVersion: v1
+#     kind: PersistentVolumeClaim
+#     spec:
+#       accessModes:
+#       - ReadWriteOnce
+#       resources:
+#         requests:
+#           storage: KAPP-PROMETHEUS-STORAGE-PLACEHOLDER
+#       storageClassName: standard
   version: v2.11.0
