more rbac config & status update

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -43,6 +43,12 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - apiregistration.k8s.io
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
   - apps
   resources:
   - '*'
