refactor reconcile component

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -55,6 +55,24 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - batch
+  resources:
+  - cronjobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - batch
+  resources:
+  - cronjobs/status
+  verbs:
+  - get
+- apiGroups:
   - cert-manager.io
   resources:
   - clusterissuers
