--- a/controller/.air.controllers-test.conf
+++ b/controller/.air.controllers-test.conf
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "make generate & make manifests & go test ./controllers -coverprofile cover.out -v -c -o tmp/controllers_test_build"
+cmd = "make generate & make manifests & go test ./controllers -covermode=set -coverprofile cover.out -v -c -o tmp/controllers_test_build" #; go tool cover -func=cover.out"
 # Binary file yields from `cmd`.
 bin = "tmp/controllers_test_build"
 # Customize binary.
