add yml for socks
https://microservices-demo.github.io/

--- a/controller/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -103,7 +103,7 @@ spec:
                     - SCTP
                     type: string
                   servicePort:
-                    description: '? what is service port for?'
+                    description: port for service
                     format: int32
                     type: integer
                 required:
