--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -73,6 +73,7 @@ spec:
                             or a directory
                           type: string
                         path:
+                          description: the path we use to mount this volume to container
                           type: string
                         persistentVolumeClaimName:
                           description: use to store pvc name, so the disk won't be
@@ -80,11 +81,14 @@ spec:
                             existing pvc
                           type: string
                         size:
+                          description: If we need to create this volume first, the
+                            size of the volume
                           type: string
                         storageClassName:
                           description: Identify the StorageClass to create the pvc
                           type: string
                         type:
+                          description: Disk type
                           type: string
                       required:
                       - path
@@ -262,7 +266,7 @@ spec:
                           - SCTP
                           type: string
                         servicePort:
-                          description: '? what is service port for?'
+                          description: port for service
                           format: int32
                           type: integer
                       required:
