--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -65,9 +65,6 @@ spec:
                     items:
                       type: string
                     type: array
-                  dnsPolicy:
-                    description: DNSPolicy defines how a pod's DNS will be configured.
-                    type: string
                   env:
                     items:
                       description: EnvVar represents an environment variable present
@@ -214,6 +211,9 @@ spec:
                   memory:
                     type: string
                   name:
+                    type: string
+                  omitempty:
+                    description: DNSPolicy defines how a pod's DNS will be configured.
                     type: string
                   plugins:
                     items:
@@ -409,7 +409,6 @@ spec:
                     - cronjob
                     type: string
                 required:
-                - dnsPolicy
                 - image
                 - name
                 type: object
