--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/chart.js": "^2.9.16",
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
@@ -22,6 +23,7 @@
     "ace-builds": "^1.4.8",
     "antd": "^3.26.11",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "connected-react-router": "^6.6.1",
     "debug": "^4.1.1",
     "hoist-non-react-statics": "^3.3.2",
@@ -35,6 +37,7 @@
     "query-string": "^6.11.1",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
