--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.6.1",
+    "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
