--- a/Dockerfile-controller
+++ b/Dockerfile-controller
@@ -2,20 +2,23 @@
 FROM golang:1.13 as builder
 
 WORKDIR /workspace
+COPY lib/ lib/
+
+WORKDIR controller
+
 # Copy the Go Modules manifests
-COPY go.mod go.mod
-COPY go.sum go.sum
-# cache deps before building and copying source so that we don't need to re-download as much
-# and so that source changes don't invalidate our downloaded layer
+COPY controller/go.mod go.mod
+COPY controller/go.sum go.sum
+
 RUN go mod download
 
 # Copy the go source
-COPY main.go main.go
-COPY api/ api/
-COPY controllers/ controllers/
-COPY util/ util/
+COPY controller/main.go main.go
+COPY controller/api/ api/
+COPY controller/controllers/ controllers/
+COPY controller/util/ util/
 
-COPY resources/ resources/
+COPY controller/resources/ resources/
 
 # Build
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a -o manager main.go
