--- a/Dockerfile-controller
+++ b/Dockerfile-controller
@@ -27,8 +27,8 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a -o manager 
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 FROM gcr.io/distroless/static:nonroot
 WORKDIR /
-COPY --from=builder /workspace/manager .
-COPY --from=builder /workspace/resources /resources
+COPY --from=builder /workspace/controller/manager .
+COPY --from=builder /workspace/controller/resources /resources
 USER nonroot:nonroot
 
 ENTRYPOINT ["/manager"]
