support PodAffinityType & NodeSelectorLabels

--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -229,10 +229,16 @@ spec:
                     type: string
                   name:
                     type: string
+                  nodeSelectorLabels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   plugins:
                     items:
                       type: object
                     type: array
+                  podAffinityType:
+                    type: string
                   ports:
                     items:
                       properties:
