--- a/controller/Makefile
+++ b/controller/Makefile
@@ -37,6 +37,7 @@ uninstall: manifests
 deploy: manifests
 	cd config/manager && kustomize edit set image controller=${IMG}
 	kustomize build config/default | kubectl apply -f -
+	#kustomize build config/default > t1.yml
 
 # Generate manifests e.g. CRD, RBAC etc.
 manifests: controller-gen
