--- a/controller/config/manager/kustomization.yaml
+++ b/controller/config/manager/kustomization.yaml
@@ -4,4 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: diveinto/kapp
+  newName: kapp
+  newTag: manager
