--- a/controller/config/manager/kustomization.yaml
+++ b/controller/config/manager/kustomization.yaml
@@ -4,5 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: kapp
-  newTag: manager
+  newName: kapp-manager
