--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -399,6 +399,9 @@ spec:
                   volumes:
                     items:
                       properties:
+                        kappConfigPath:
+                          description: Config File Path
+                          type: string
                         path:
                           description: the path we use to mount this volume to container
                           type: string
