--- a/controller/config/samples/core_v1alpha1_application-min.yaml
+++ b/controller/config/samples/core_v1alpha1_application-min.yaml
@@ -11,11 +11,10 @@ metadata:
 spec:
   isActive: true
   components:
-    - name: payment
+    - name: pa.yment
       dependencies: 
         - shippingservice
       image: weaveworksdemos/payment:0.4.3
-      replicas: 1
       cpu: 100m
       memory: 100Mi
       ports:
@@ -34,8 +33,8 @@ spec:
         initialDelaySeconds: 180
         periodSeconds: 3
     - name: shippingservice
-      dependencies: 
-        - payment
+      #dependencies:
+      #  - payment
       image: diveinto/shippingservice:v0.1.4-4-g997b5e8
       replicas: 1
       cpu: 50m
