--- a/controller/config/samples/core_v1alpha1_application-min.yaml
+++ b/controller/config/samples/core_v1alpha1_application-min.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   isActive: true
   components:
-    - name: pa.yment
+    - name: payment
       dependencies: 
         - shippingservice
       image: weaveworksdemos/payment:0.4.3
@@ -33,8 +33,8 @@ spec:
         initialDelaySeconds: 180
         periodSeconds: 3
     - name: shippingservice
-      #dependencies:
-      #  - payment
+      dependencies:
+        - payment
       image: diveinto/shippingservice:v0.1.4-4-g997b5e8
       replicas: 1
       cpu: 50m
