--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ jobs:
         - 1.12
       stage: test
       name: api
-      before_install:
+      install:
         - cd api
         - go get ./...
       script:
-        - cd api
         - go test -race -coverprofile=coverage.txt -covermode=atomic
       after_success:
         - bash <(curl -s https://codecov.io/bash)
