--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,17 @@ jobs:
     - language: go
       env:
         - GO111MODULE=on # remove this when change to golang 1.13
+        - KUBEBUILDER_ASSETS=$HOME/kubebuilder/bin
       go:
         - 1.12
       stage: test
       name: api
+      before_install:
+        - os=$(go env GOOS)
+        - arch=$(go env GOARCH)
+        - curl -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/
+        - sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} $HOME/kubebuilder
+        - export PATH=$PATH:$HOME/kubebuilder/bin
       install:
         - cd api
         - go get ./...
@@ -28,10 +35,17 @@ jobs:
     - language: go
       env:
         - GO111MODULE=on # remove this when change to golang 1.13
+        - KUBEBUILDER_ASSETS=$HOME/kubebuilder/bin
       go:
         - 1.12
       stage: test
       name: controller
+      before_install:
+        - os=$(go env GOOS)
+        - arch=$(go env GOARCH)
+        - curl -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/
+        - sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} $HOME/kubebuilder
+        - export PATH=$PATH:$HOME/kubebuilder/bin
       install:
         - cd controller
         - go get ./...
