--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ jobs:
         - curl -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/
         - sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} $HOME/kubebuilder
         - export PATH=$PATH:$HOME/kubebuilder/bin
+        - ls -alh $HOME/kubebuilder/bin
       install:
         - cd api
+        - ls -alh $HOME/kubebuilder/bin
         - go get ./...
       script:
         - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
