--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,15 @@ jobs:
         - os=$(go env GOOS)
         - arch=$(go env GOARCH)
         - curl -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/
+        - ls -alh /tmp
+        - ls -alh /tmp/kubebuilder_2.3.1_${os}_${arch}; true
+        - ls -alh /tmp/kubebuilder_2.3.1_${os}_${arch}/bin; true
         - sudo mv /tmp/kubebuilder_2.3.1_${os}_${arch} $HOME/kubebuilder
         - export PATH=$PATH:$HOME/kubebuilder/bin
         - ls -alh $HOME/kubebuilder/bin
       install:
         - cd api
+        - ls -alh $HOME/kubebuilder
         - ls -alh $HOME/kubebuilder/bin
         - go get ./...
       script:
