--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -14,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_applications.yaml
 #- patches/webhook_in_componenttemplates.yaml
 #- patches/webhook_in_dependencies.yaml
+#- patches/webhook_in_plugins.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -21,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_applications.yaml
 #- patches/cainjection_in_componenttemplates.yaml
 #- patches/cainjection_in_dependencies.yaml
+#- patches/cainjection_in_plugins.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
