use openapi to validate kapp

--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -228,6 +228,7 @@ spec:
                   memory:
                     type: string
                   name:
+                    pattern: ^[a-zA-Z-]+$
                     type: string
                   nodeSelectorLabels:
                     additionalProperties:
