support application level plugins

--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -238,6 +238,10 @@ spec:
                     items:
                       type: object
                     type: array
+                  pluginsNew:
+                    items:
+                      type: object
+                    type: array
                   podAffinityType:
                     type: string
                   ports:
@@ -437,6 +441,10 @@ spec:
               type: string
             isActive:
               type: boolean
+            pluginsNew:
+              items:
+                type: object
+              type: array
             sharedEnv:
               items:
                 description: EnvVar represents an environment variable present in
